--- a/src/app/recipie/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipie/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" (click)="onSelectItem()"class="list-group-item clearfix" >
+  <div class="pull-left">
+  <div class="list-group-item-heading">{{recipeItem.name}}</div>
+  <div class="list-group-item-text">{{recipeItem.description}}</div>
+
+</div>
+<span class="pull-right">
+    <img src="{{recipeItem.imagePath}}" class="img-responsive" alt="Image">
+
+</span>
+
+
+</a>
