--- a/src/app/recipie/recipie.component.html
+++ b/src/app/recipie/recipie.component.html
@@ -2,12 +2,13 @@
 <div class="row">
 
     <div class="col-md-5">
-            <app-recipe-list></app-recipe-list>
+            <app-recipe-list ></app-recipe-list>
 
     </div>
     <div class="col-md-7">
-            <app-recipe-details>
-  
+            <app-recipe-details *ngIf="recipeData; else infoText" [recipeData]= "recipeData" >
+
                 </app-recipe-details>
+                <ng-template #infoText> please select a recipe</ng-template >
     </div>
 </div>
