--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,11 +8,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Recipe</a></li>
-            <li><a href="#">Shopping</a></li>
-        </ul>   
-        <ul class="nav navbar-nav navbar-right">
-            
+            <li (click)="onSelectRecipe()"><a href="#">Recipe</a></li>
+            <li (click)="onSelectShop()"><a href="#">Shopping</a></li>
+        </ul>
+        <ul appDropDown class="nav navbar-nav navbar-right open">
+
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
