--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -5,24 +5,24 @@
         <div class="col-sm-5">
           <div class="form-group">
           <label for="name" class="col-sm-2">name</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" id="name" class="form-control" #nameInput>
         </div>
         <div class="form-group">
 
           <label for="amount" class="col-sm-2">amount</label>
-          <input type="text" id="amount" class="form-control">
+          <input type="text" id="amount" class="form-control" #amountInput>
         </div>
 
         </div>
       </div>
       <div class="row">
         <div class="col-sx-12">
-          <div type="submit"class="btn btn-success">SUBMIT</div>
+          <div type="submit"class="btn btn-success" (click)="addItem()">SUBMIT</div>
           <div type="button" class="btn btn-danger">delete</div>
-          <div class="btn btn-primary">clear</div>   
+          <div class="btn btn-primary">clear</div>
              </div>
       </div>
-     
+
           </form>
   </div>
 </div>
