--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div  class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-shopping-edit></app-shopping-edit>
+      <app-shopping-edit appExample ></app-shopping-edit>
       <hr>
-      <a class="list-group-item"href="" *ngFor="let ing of Ingredients">
+      <a class="list-group-item" *ngFor="let ing of ingredients">
         {{ing.name}}
         {{ing.noOfItems}}
       </a>
